[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "primalscheme"
author = "Josh Quick"
author-email = "j.quick@bham.ac.uk"
maintainer = "Andrew Smith"
maintainer-email = "andysmith.d@gmail.com"
home-page = "https://github.com/aresti/primalscheme"

requires = [
    "biopython>=1,<2",
    "primer3-py>=0,<1",
    "reportlab>=3,<4",
    "parasail==1.2",
]
requires-python = ">=3.6,<4"

description-file = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.6",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[tool.flit.scripts]
primalscheme = "primalscheme.cli:main"

[tool.flit.metadata.requires-extra]
test = [
    "pytest >=2.7.3",
    "pytest-cov",
]

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
envlist = py36, py37, py38

[testenv]
deps = pytest >= 3.0.0, <4
commands = pytest
"""